[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zros"
version = "0.1.4"
description = "ZROS: ZeroMQ ROS-like framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "opencv-python>=4.13.0.92",
    "pyzmq>=27.1.0",
]

[project.scripts]
zroscore = "zros.zroscore:main"
zros_pub = "zros.zros_pub:main"
zros_echo = "zros.zros_echo:main"
zros_status = "zros.zros_status:main"

[project.optional-dependencies]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.2",
    "mkdocstrings[python]==0.26.1",
]

[tool.setuptools.packages.find]
include = ["zros*"]
